syntax="proto3"; // 声明protobuf的版本
package fixbug; // 声明代码所在的包

// 表示生成service服务类和rpc方法描述
option cc_generic_services = true;


message ResultCode{
    int32 errcode=1;
    bytes errmsg=2;
}
// 数据 列表 映射表
//定义登录请求消息类型
message LoginRequest{
    bytes name=1;
    bytes pwd=2;
    map<int32,string> test = 3;
}

//定义登录响应消息类型
message LoginResponse{
    ResultCode result = 1;
    bool success = 2;
}

// 获取好友列表
message GetFriendListsRequest{
    uint32 userid = 1;
}

message User{
    bytes name = 1;
    uint32 age = 2;
    enum Sex{
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}
message GetFriendListsResponse{
    ResultCode result = 1;
    repeated User friend_list = 2; // 列表类型
}

//protobuf中如何定义描述rpc方法的类型 - service
service UserServiceRpc{
    rpc Login(LoginRequest) returns(LoginRequest);
    rpc GetFriendList(GetFriendListsRequest) returns(GetFriendListsResponse);
}


